experimental project.  However, as it moves towards having a more
"stable" release, I feel that it is better served by being small as
opposed to providing every possible feature. Thus, a wide range of
features are being removed or refactored a bit.  If a feature you are
using gets removed and you'd like to request its return, please submit
a bug report!  - Dave

10/15/2019 Refactored task.py into separate files for tasks and time
           management.

09/29/2019 Removed Promise.  Not documented, but also want to rethink the
           whole design/implementation of it. The "standard" way that
           Python implements "promises" is through the Future class
           as found in the concurrent.futures module.  However, Futures
           are tricky.  They often have callback functions attached to 
           them and they can be cancelled.  Some further thought needs
           to be given as to how such features might integrate with the
           rest of Curio.  Code for the old Promise class can be 
           found the examples directory.

09/26/2019 Removed support for the Asyncio bridge. It wasn't documented
           and there are many possible ways in which Curio might 
           potentially interact with an asyncio event loop. For example,
           using queues.  Asyncio interaction may be revisited in the
           future.  

09/13/2019 Support for context-manager use of spawn_thread() has been
           withdrawn.  It's a neat feature, but the implementation
           is pretty hairy.  It also creates a situation where async
           functions partially run in coroutines and partially in threads.
           All things equal, it's probably more sane to make this 
           kind of distinction at the function level, not at the level
           of code blocks.   

09/11/2019 Removed AsyncObject and AsyncInstanceType. Very specialized.
           Not used elsewhere in Curio. Involves metaclasses. One
           less thing to maintain.
